--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,13 +26,8 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
-  margin-left: 24px;
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'Poppins', sans-serif;
-  font-family: 'Raleway', sans-serif;
-  font-family: 'Roboto', sans-serif;
-}
+/* Styles for Timer */
+
 
 .home {
   margin-bottom: 16px;
@@ -46,6 +41,7 @@ body {
   color: #808080;
   background-color: #FFF;
   border: 1px solid #808080;
+  margin-left: 16px;
 }
 
 .input:disabled {
@@ -83,6 +79,7 @@ body {
   margin-top: 24px;
   display: flex;
   justify-content: space-between;
+  margin-left: 16px;
 }
 
 .field {
@@ -99,4 +96,91 @@ body {
   font-size: 10px;
   text-transform: uppercase;
   align-self: center;
+}
+
+/* Styles for Snackbar */
+
+.form {
+  margin-left: 16px;
+}
+
+.label-delay {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.input-delay {
+  display: flex;
+  width: 360px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin-top: 8px;
+  padding-left: 16px;
+}
+
+.fieldset-legend {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.fieldset-form {
+  margin-top: 16px;
+  width: 360px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  stroke-width: 1px;
+  stroke: #808080;
+  border: 1px solid #808080;
+  margin-bottom: 24px;
+}
+/* 
+.fieldset-input{
+
+} */
+
+.fieldset-label {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.button-create {
+  display: flex;
+  width: 360px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background: #4E75FF;
+  border: none;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.button-create:focus,
+.button-create:hover {
+  background: #6C8CFF;
 }
